<resources>
    <string name="app_name">InstantPlay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="message_here">Message here</string>
    <string name="backbutton">BackButton</string>
    <string name="category">Category</string>
    <string name="create">Create</string>
    <string name="write_a_title_here">Write a title here</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="bio">Bio</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here (:</string>
    <string name="bio_here">bio here</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here (:</string>
    <string name="instantplay">InstantPlay</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="hobbies">Hobbies</string>
    <string name="food">Food</string>
    <string name="dating">Dating</string>
    <string name="sports">Sports</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="what_brings_you_here_today">What brings you here today?</string>
    <string name="your_messages">Your Messages</string>
    <string name="lisbon_portugal">Lisbon, Portugal</string>
    <string name="gerard_way">𝑰𝒏 𝒐𝒕𝒉𝒆𝒓 𝒘𝒐𝒓𝒅𝒔, 𝒌𝒆𝒆𝒑 𝒚𝒐𝒖𝒓 𝒃𝒂𝒅 𝒗𝒊𝒃𝒆𝒔 𝒐𝒖𝒕 𝒐𝒇 𝒎𝒚 𝒄𝒐𝒓𝒏𝒇𝒍𝒂𝒌𝒆𝒔 ~ Gerard Way</string>
    <string name="search_users">Search users...</string>
    <string name="arman">Arman</string>
    <string name="_15_08_1999">15/08/1999</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="language">Language</string>
    <string name="get_premium_features">Get Premium Features</string>
    <string name="enjoyed_it_consider_donating">Enjoyed it? Consider Donating</string>
    <string name="date">date</string>
    <string name="mike">Mike</string>
    <string name="description">Description</string>
    <string name="text">Text</string>
    <string name="full_name">Full Name</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="posts">Posts</string>
    <string name="messages">Messages</string>
    <string name="if_you_want_to_post_a_picture_together_with_a_description_just_hit_the_plus_button_at_the_bottom_center_of_the_screen">If you want to post a picture together with a description just hit the plus button at the bottom center of the screen.</string>
    <string name="at_the_homepage_access_one_of_the_categories_sports_hobbies_etc_and_check_or_create_an_announce">At the homepage, access one of the categories (sports, hobbies, etc.) and check or create an announce.</string>
    <string name="if_you_want_to_message_someone_at_the_homepage_select_the_messages_icon_at_the_right_side_upwords">If you want to message someone, at the homepage, select the messages icon at the right side upwords.</string>
    <string name="announces">Ads</string>
</resources>
