<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/post1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_below="@id/bar">

        <TextView
            android:id="@+id/usernameStg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/arman"
            android:textSize="36sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profileStg"
            android:layout_width="110dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:src="@drawable/profile_005"/>

        <TextView
            android:id="@+id/birthStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_15_08_1999" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:layout_below="@id/post1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/switchVisibility"
                    android:gravity="center"
                    android:text="@string/profile_visibility"
                    android:textAlignment="center" />

                <Switch
                    android:id="@+id/switchVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="" />
            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/getPremium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/storyplaceholder_background"
                android:text="@string/get_premium_features" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/donate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/enjoyed_it_consider_donating" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>