<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#0087aa"
        app:contentPadding="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layoutMSG"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="20dp">
                <TextView
                    android:id="@+id/messagetextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_here"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dateItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/date" />
                <TextView
                    android:id="@+id/usernameItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/username" />

            </LinearLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>