<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/categoryTxt"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/backbtn"
                android:gravity="center"
                android:text="@string/category"
                android:textSize="36sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/titleTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/write_a_title_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/descrTxt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleTxt"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="@+id/descrTxt"
        app:layout_constraintStart_toStartOf="@+id/descrTxt"
        app:layout_constraintTop_toBottomOf="@+id/descrTxt"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
</androidx.constraintlayout.widget.ConstraintLayout>